Revision history for {{$dist->name}}

{{$NEXT}}

0.03      2015-12-12 04:34:49 -0500
  - Added requires for create/drop database
  - Added requires for shell interaction
  - Added requires for dsn/DBI interaction

0.02      2015-12-09 20:19:14 -0500
  - Old create method renamed to init
  - New create is a class method to create and init an
    instance
  - Added fallback restart method (stop, start)
  - Database::Server->generate_port class method

0.01      2015-11-24 11:17:15 -0500
  - initial version